# Raspberry-Pi-Pico

./: README.md
1.8inch_TFT_Display/: CMakeLists.txt
1.8inch_TFT_Display/inc/: main.h  st7735.h  testimg.h
1.8inch_TFT_Display/src/: main.c  st7735.c
7_SegmentDisplay/: 7_SegmentDisplay.c  CMakeLists.txt
ADXL335/: ADXL335.c  CMakeLists.txt
Blink/: Blink.c  CMakeLists.txt
Button_Interrupts/: Button_Interrupts.c  CMakeLists.txt
Button_Polling/: Button_Polling.c  CMakeLists.txt
FreeRTOS_Blink/: CMakeLists.txt
FreeRTOS_Blink/inc/: FreeRTOSConfig.h
FreeRTOS_Blink/src/: main.c
MPU6050/: CMakeLists.txt
MPU6050/inc/: MPU6050.h
MPU6050/src/: MPU6050.c  main.c
Nokia5110/: CMakeLists.txt
Nokia5110/inc/: Nokia5110.h
Nokia5110/src/: Nokia5110.c  main.c
USB_VCOM/: CMakeLists.txt  USB_VCOM.c
Voltage_Reading/: CMakeLists.txt  Voltage_Reading.c
